# VideoBrake

./: .gitignore  CHANGELOG.md  demo_wpengine.py  main.py  pyproject.toml  rename_log_20250819_192132.json  rename_log_20250819_192928.json  run_wpengine.py  start_wpengine.bat  test_videobrake.py  wallpaper_config.json  wallpaper_paths_20250819_182856.txt  wallpapers_20250819_182857.json
src/: bitscaculate.py  formatfliter.py
src/audiov/: README.md  __init__.py  __main__.py  audiov_cli.py  config.json  config.py  ffmpeg_wrapper.py  file_handler.py  interactive.py
src/bitscaculate/: __main__.py  common_utils.py  taskfile.yaml  video_analyzer.py  video_processor.py  video_report_viewer.py
src/bitv/: __main__.py  common_utils.py  taskfile.yaml  video_analyzer.py  video_processor.py  video_report_viewer.py
src/brakev/: __init__.py  __main__.py  cli.py  interactive.py
src/engingv/: README.md  WALLPAPER_ENGINE_GUIDE.md  __init__.py  __main__.py  app.py  cli.py  run_wpengine.py  scanner.py  taskfile.yaml  test_wpengine.py  wallpaper_config_template.json
src/engingv/core/: __init__.py  app_simple.py  cli.py  models.py  renamer.py  scanner.py
src/engingv/tests/: demo_wpengine.py  test_wpengine.py
src/engingv/ui/: __init__.py  app.py  app_simple.py  rename_ui.py  ui_components.py
src/engingv/utils/: __init__.py  config.py  run_wpengine.py  wallpaper_config_template.json
src/formatfliter/: __init__.py  core.py
src/formatv/: __init__.py  __main__.py  collect.py  config.json  config.py  execute.py  input_path.py  scan.py
src/formatv/test/: test_scan_and_execute.py
src/subx/: configure_and_match.bat  quick_match.bat  safe_match.bat  simple_match.bat
src/tests/: start_wpengine.bat
src/videobrake/: __init__.py  __main__.py  cli.py  interactive.py
src/wpengine/: __main__.py  models.py  renamer.py
videobrake/: __init__.py  __main__.py  video_analyzer.py  video_processor.py
