[project]
name = "videobrake"
version = "0.1.0"
description = "视频码率分析与分类工具 - 按码率自动对视频文件进行分组"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "VideoBrake", email = "videobrake@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.3.0",
    "loguru>=0.7.0",
    "pyperclip>=1.8.2",
    "opencv-python>=4.7.0",
    "send2trash>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/HibernalGlow/VideoBrake"
"Bug Tracker" = "https://github.com/HibernalGlow/VideoBrake/issues"

[project.scripts]
videobrake = "videobrake.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["videobrake"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
